explicitly stated differently.

20070425 Request by Christian Sauer: polygon intersection
   paper with nice algorithm: http://citeseer.ist.psu.edu/cache/papers/cs/25021/http:zSzzSzfractal.dam.fmph.uniba.skzSz~sccgzSzproceedingszSz1998zSzZalik.pdf/zalik98quick.pdf
20121024 Request by Rick Rutgers: widening polygon contour

version 1.12:

	Improvements:
	- warn about the instability of centoid.
	  rt.cpan.org#169306 [Graham Knop]

version 1.11: Fri  2 May 16:57:09 CEST 2025

	Fixes:
	- fix metadata [Mohammad S Anwar]
	- polygon_same broken tolerance parameter [Graham Knop]

	Improvements:
	- link to github distributions in meta-data.
	- centroid of line will result in middle.  For longer flat polys, it
	  will produce a clean error i.s.o "divide by zero". [Alex Sudakov]
	- add .gitignore

version 1.10: Wed  3 Jan 11:04:43 CET 2018
	Another release, to test releasing to github.

	Changes:
	- require perl 5.10

	Improvements:
	- documentation improvements

version 1.09: Wed  3 Jan 10:56:42 CET 2018
	Another release, to test releasing to github.

	Improvements:
	- format option to object string() and points()

version 1.08: Tue  2 Jan 12:01:29 CET 2018

	Improvements:
	- convert to GIT
	- move to GitHub
	- documentation improvements
	- indentation tabs should be blanks.

version 1.07: Wed 27 Dec 11:14:00 CET 2017

	Fixes:
	- float rounding issue in Perl >= 5.27 breaks tests [cpan_testers]

	Improvements:
	- new ::Calc::polygon_format()

version 1.06: Sun 16 Jul 13:04:43 CEST 2017

	Fixes:
	- missed a spelling fix.  rt.cpan.org#118297 [Gregor Herrmann]
	- fix $obj->mirror rt.cpan.org#122487 [Michael Scott]

	Improvements:
	- remove dependency to Test::Pod

version 1.05: Wed Dec 28 12:55:41 CET 2016

	Fixes:
	- spelling fix.  rt.cpan.org#118297 [Angel Abad]

	Improvements:
	- add distance to polygon calculation [Andreas Koenig]
	- use Perl from PATH when running in tests stand-alone.

version 1.04: Fri 23 Sep 16:03:17 CEST 2016

	Fixes:
	- contains on vertical edge